--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "clsx": "^2.1.1",
     "cra-template": "1.2.0",
     "date-fns": "^4.1.0",
+    "exceljs": "^4.4.0",
     "lucide-react": "^0.468.0",
     "psmt_checker": "file:",
     "react": "^19.0.0",
