--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cra-template": "1.2.0",
     "date-fns": "^4.1.0",
     "exceljs": "^4.4.0",
+    "file-saver": "^2.0.5",
     "lucide-react": "^0.468.0",
     "psmt_checker": "file:",
     "react": "^19.0.0",
