--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "psmt_checker": "file:",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.4.0",
     "react-scripts": "5.0.1",
     "recharts": "^2.15.0",
     "tailwind-merge": "^2.5.5",
